--- a/index.html
+++ b/index.html
@@ -3,11 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gold & Mineral Panning</title>
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>Gold Panning</title>
 </head>
 <body>
-    <div class="hero"></div>
+    <div class="hero">
+        <div class="border">
+            <h2>Prospecting Nature's Treasures<br><span class="subtitle">A Beginer's Guide to Gold Panning</span></h2>
+        </div>
+    </div>
+    <div class="panning">
+        <div class="slider">
+            <div class="box image" id="card1">
+                <h2>What is Gold Panning</h2>
+                <p>Gold panning is a recreational activity and hobby that involves sifting through riverbed sediments to find small gold flakes or nuggets. It's a fun and rewarding way to connect with nature while searching for a valuable treasure.</p>
+            </div>
+            <div class="box image" id="card2">
+                <h2>Supplies for Gold Panning</h2>
+                <p>To get started, you'll need a gold pan, preferably a 10-14 inch diameter pan with ridges to trap gold. Additionally, a small shovel, a classifier (sieve), and a vial to store your findings are essential. You may also consider using tweezers for handling tiny gold particles.</p>
+            </div>
+            <div class="box image" id="card3">
+                <h2>Where to Pan for Gold</h2>
+                <p>Look for areas with active or historic gold mining, such as rivers, streams, or creeks. Public lands, national forests, and Bureau of Land Management sites often permit gold panning. Research local regulations and join a local gold prospecting club for guidance.</p>
+            </div>    
+            <div class="box image" id="card4">
+                <h2>How to Pan for Gold</h2>
+                <ul>
+                    <li>Fill your pan with gravel and sediment from the riverbed.</li>
+                    <li>Submerge the pan in water and agitate it to let the lighter materials wash away.</li>
+                    <li>Repeat the process, shaking and tilting the pan, allowing heavier materials like gold to settle at the bottom.</li>
+                    <li>Carefully remove larger rocks and debris while retaining the heaviest materials.</li>
+                    <li>Use gentle swirling motions to separate black sands and concentrate the gold at the bottom of the pan.</li>
+                </ul>
+            </div>
+            <div class="box image" id="card5">
+                <h2>Steps to Gold Panning</h2>
+                <ul>
+                    <li>Find a suitable location with the potential for gold deposits.</li>
+                    <li>Acquire the right equipment and tools.</li>
+                    <li>Learn proper panning techniques through practice and guidance from experienced panners.</li>
+                    <li>Respect nature and the environment while panning, leaving no trace behind.</li>
+                </ul>
+            </div>
+            <div class="box image" id="card6">
+                <h2>Places to Pan for Gold</h2>
+                <ul>
+                    <li>California: American River, Kern River, and Feather River.</li>
+                    <li>Colorado: Arkansas River, Clear Creek, and Cache Creek.</li>
+                    <li>Alaska: Chicken, Hatcher Pass, and Nome.</li>
+                    <li>Respect nature and the environment while panning, leaving no trace behind.</li>
+                </ul>
+            </div>
+            <button id="next">></button>
+            <button id="back"><</button>   
+        </div>
+    </div>
     <div class="youtube"></div>
-    <div class="panning"></div>
+    <script src="./assets/app.js"></script>
 </body>
 </html>
