--- a/index.html
+++ b/index.html
@@ -16,37 +16,42 @@
         <div class="slider">
             <div class="box image" id="card1">
                 <h2>What is Gold Panning</h2>
+                <img src="./assets/images/image1.jpg">
                 <p class="bottom">Gold panning is a recreational activity and hobby that involves sifting through riverbed sediments to find small gold flakes or nuggets. It's a fun and rewarding way to connect with nature while searching for a valuable treasure.</p>
             </div>
             <div class="box image" id="card2">
                 <h2>Supplies for Gold Panning</h2>
+                <img src="./assets/images/image2.jpg">
                 <p class="bottom">To get started, you'll need a gold pan, preferably a 10-14 inch diameter pan with ridges to trap gold. Additionally, a small shovel, a classifier (sieve), and a vial to store your findings are essential. You may also consider using tweezers for handling tiny gold particles.</p>
             </div>
             <div class="box image" id="card3">
                 <h2>Where to Pan for Gold</h2>
+                <img src="./assets/images/image3.jpg">
                 <p class="bottom">Look for areas with active or historic gold mining, such as rivers, streams, or creeks. Public lands, national forests, and Bureau of Land Management sites often permit gold panning. Research local regulations and join a local gold prospecting club for guidance.</p>
             </div>    
             <div class="box image" id="card4">
                 <h2>How to Pan for Gold</h2>
+                <img src="./assets/images/image4.jpg">
                 <ul class="bottom">
-                    <li>Fill your pan with gravel and sediment from the riverbed.</li>
-                    <li>Submerge the pan in water and agitate it to let the lighter materials wash away.</li>
-                    <li>Repeat the process, shaking and tilting the pan, allowing heavier materials like gold to settle at the bottom.</li>
-                    <li>Carefully remove larger rocks and debris while retaining the heaviest materials.</li>
-                    <li>Use gentle swirling motions to separate black sands and concentrate the gold at the bottom of the pan.</li>
+                    <li>Fill your pan with riverbed sediment.</li>
+                    <li>Submerge and agitate to wash away lighter materials.</li>
+                    <li>Shake and tilt to let gold settle at the bottom.</li>
+                    <li>Remove larger rocks, keeping the heaviest materials.</li>
+                    <li>Swirl to separate black sands and concentrate gold.</li>
                 </ul>
             </div>
             <div class="box image" id="card5">
                 <h2>Steps to Gold Panning</h2>
+                <img src="./assets/images/image5.jpg">
                 <ul class="bottom">
                     <li>Find a suitable location with the potential for gold deposits.</li>
                     <li>Acquire the right equipment and tools.</li>
                     <li>Learn proper panning techniques through practice and guidance from experienced panners.</li>
-                    <li>Respect nature and the environment while panning, leaving no trace behind.</li>
                 </ul>
             </div>
             <div class="box image" id="card6">
                 <h2>Places to Pan for Gold</h2>
+                <img src="./assets/images/image6.jpg">
                 <ul class="bottom">
                     <li>American River, Kern River, and Feather River.</li>
                     <li>Arkansas River, Clear Creek, and Cache Creek.</li>
